Added option to not bound first state for PWA MPC constuction. fixed some compatibility issues in packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ casadi>=3.6.3
 scipy>=1.11.2
 gymnasium>=0.28.1
 csnlp>=1.5.9
-mpcrl>=1.1.9
+mpcrl>=1.2.0.post1
 matplotlib>=3.7.3
 gurobipy>=10.0.3
 dmpcrl>=1.0.0
+tikzplotlib>=0.10.1
